# mlops-ticket-classifier

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
