[tool.poetry]
name = "mlops-ticket-classifier"
version = "0.1.0"
description = "End-to-End MLOps Ticket Classification Project"
authors = ["0xrubusdata <0xrubusdata@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.0"
numpy = "^2.1.0"
mlflow = "^2.20.0"
python-dotenv = "^1.0.0"
dvc = {extras = ["s3"], version = "^3.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.9.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
api = "src.api.main:main"   # you can use it later with it "poetry run api"